--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
+    "@hookform/resolvers": "5.2.1",
     "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-aspect-ratio": "1.1.7",
@@ -37,37 +37,37 @@
     "@radix-ui/react-toggle": "1.1.10",
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
-    "autoprefixer": "^10.4.21",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "autoprefixer": "10.4.21",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
-    "geist": "^1.4.2",
+    "geist": "1.4.2",
     "input-otp": "1.4.2",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "0.539.0",
     "next": "15.5.2",
-    "next-themes": "^0.4.6",
-    "react": "^19",
+    "next-themes": "0.4.6",
+    "react": "19",
     "react-day-picker": "9.8.1",
-    "react-dom": "^19",
-    "react-hook-form": "^7.62.0",
-    "react-resizable-panels": "^3.0.4",
+    "react-dom": "19",
+    "react-hook-form": "7.62.0",
+    "react-resizable-panels": "3.0.4",
     "recharts": "3.1.2",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
+    "sonner": "2.0.7",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss-animate": "1.0.7",
+    "vaul": "1.1.2",
     "zod": "4.0.17"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8.5",
-    "tailwindcss": "^4.1.11",
+    "@tailwindcss/postcss": "4.1.11",
+    "@types/node": "24",
+    "@types/react": "19",
+    "@types/react-dom": "19",
+    "postcss": "8.5",
+    "tailwindcss": "4.1.11",
     "tw-animate-css": "1.3.6",
-    "typescript": "^5"
+    "typescript": "5"
   }
 }
