--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "3.3.1",
     "tailwindcss-animate": "1.0.7",
     "vaul": "1.1.2",
+    "winston": "^3.17.0",
     "zod": "4.0.17"
   },
   "devDependencies": {
