--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@types/node": "24",
     "@types/react": "19",
     "@types/react-dom": "19",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.0.10",
     "postcss": "8.5",
     "tailwindcss": "4.1.17",
     "tw-animate-css": "1.3.6",
